--- a/index.html
+++ b/index.html
@@ -1,7 +1,161 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <h1>Hello and welcome!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Interview</title>
+</head>
+<body>
+    <div>
+        <h1>Fergus Magor</h1>
+            <a href="https://github.com/Fergasi">Fergus' GitHub profile</a>
+            <br><br>
+
+            <img src="https://d2h8qhew3fx4cx.cloudfront.net/client/4112/6266f9a262c2cbdbb00fa06eb3783319/06753887891cc9dbfacb2a128dc85fc2_large.jpeg" alt="" height="250px"/>
+
+            <ol>
+                <li>
+                    <strong>Do you have any pets?</strong> <br>
+                    Yes, one dog
+                </li>
+                <li>
+                    <strong>Last movie you watched?</strong> <br>
+                    Fantastic Fungi
+                </li>
+                <li>
+                    <strong>Current city, state?</strong> <br>
+                    Queens, New York
+                </li>
+                <li>
+                    <strong>Favourite food?</strong> <br>
+                    BBQ
+                </li>
+                <li>
+                    <strong>Birth month?</strong> <br>
+                    July
+                </li>
+                <li>
+                    <strong>Favourite color?</strong> <br>
+                    Green
+                </li>
+                <li>
+                    <strong>You’ve been given an elephant. You can’t give it away or sell it. What would you do with the elephant?</strong> <br>
+                    Start a manure business
+                </li>
+                <li>
+                    <strong>Favourite music genre?</strong> <br>
+                    Rap
+                </li>
+                <li>
+                    <strong>Favourite sport (play or watch)?</strong> <br>
+                    Basketball
+                </li>
+                <li>
+                    <strong>Superhero movies, yes or no?</strong> <br>
+                    No
+                </li>
+            </ol>
+    </div>
+    <div>
+        <h1>Robert Hubert</h1>
+            <a href="https://github.com/Rhubert710">Robert's GitHub profile</a>
+            <br><br>
+
+            <img src="https://d2h8qhew3fx4cx.cloudfront.net/client/4112/e05cfba5acadf945a588967237e15970/31da5f6214c578d931557316d6e5533c_large.jpeg" alt="" height="250px"/>
+
+            <ol>
+                <li>
+                    <strong>Do you have any pets?</strong> <br>
+                    no
+                </li>
+                <li>
+                    <strong>Last movie you watched?</strong> <br>
+                    Hateful 8
+                </li>
+                <li>
+                    <strong>Current city, state?</strong> <br>
+                    Queens, NY
+                </li>
+                <li>
+                    <strong>Favourite food?</strong> <br>
+                    Italain
+                </li>
+                <li>
+                    <strong>Birth month?</strong> <br>
+                    July
+                </li>
+                <li>
+                    <strong>Favourite color?</strong> <br>
+                    Blue
+                </li>
+                <li>
+                    <strong>You’ve been given an elephant. You can’t give it away or sell it. What would you do with the elephant?</strong> <br>
+                    put a saddle on it and ride it around
+                </li>
+                <li>
+                    <strong>Favourite music genre?</strong> <br>
+                    Rock
+                </li>
+                <li>
+                    <strong>Favourite sport (play or watch)?</strong> <br>
+                    MMA
+                </li>
+                <li>
+                    <strong>Superhero movies, yes or no?</strong> <br>
+                    No
+                </li>
+            </ol>
+    </div>
+    <div>
+        <h1>Sarah Lopez</h1>
+            <a href="https://github.com/slopez323">Sarah's GitHub profile</a>
+            <br><br>
+
+            <img src="https://d2h8qhew3fx4cx.cloudfront.net/client/4112/4544eb3791a8d1e8c430ebbdbb50a5e6/2a93b6d1b4247babb0e942067b0083c8_large.jpeg" alt="" height="250px"/>
+
+            <ol>
+                <li>
+                    <strong>Do you have any pets?</strong> <br>
+                    Not my own but live with my sister who has a dog
+                </li>
+                <li>
+                    <strong>Last movie you watched?</strong> <br>
+                    The Eternals (watched along with family but didn’t get to finish it)
+                </li>
+                <li>
+                    <strong>Current city, state?</strong> <br>
+                    River Edge, New Jersey
+                </li>
+                <li>
+                    <strong>Favourite food?</strong> <br>
+                    Asian fusion
+                </li>
+                <li>
+                    <strong>Birth month?</strong> <br>
+                    March
+                </li>
+                <li>
+                    <strong>Favourite color?</strong> <br>
+                    Blue
+                </li>
+                <li>
+                    <strong>You’ve been given an elephant. You can’t give it away or sell it. What would you do with the elephant?</strong> <br>
+                    Take it back to the jungle?
+                </li>
+                <li>
+                    <strong>Favourite music genre?</strong> <br>
+                    Pop
+                </li>
+                <li>
+                    <strong>Favourite sport (play or watch)?</strong> <br>
+                    Recently started watching F1
+                </li>
+                <li>
+                    <strong>Superhero movies, yes or no?</strong> <br>
+                    Yes
+                </li>
+            </ol>
+    </div>
+</body>
 </html>
